# HPCmzLib

./: .gitignore  CONVERSION-KNOWHOW  INSTALL  Included_Software_Packages.txt  Makefile  Makefile.defs  Makefile.defs.in  README.md  RectangularVectors.h  TO-CHECK-LATER.txt  ToDoNotes.txt  aclocal.m4  config.guess  config.sub  configure  configure.ac  exceptionhelper.h  stringbuilder.h  stringhelper.h  tangible_filesystem.h
Chemistry/: ChemicalFormula.cpp  ChemicalFormula.h  Chemistry.h  ClassExtensions.cpp  ClassExtensions.h  Constants.cpp  Constants.h  Element.cpp  Element.h  Isotope.cpp  Isotope.h  IsotopicDistribution.cpp  IsotopicDistribution.h  Makefile  PeriodicTable.cpp  PeriodicTable.h  ToDo-Edgar.txt
FlashLFQ/: ChromatographicPeak.cpp  ChromatographicPeak.h  DetectionType.cpp  DetectionType.h  FlashLFQ.h  FlashLFQResults.cpp  FlashLFQResults.h  FlashLfqEngine.cpp  FlashLfqEngine.h  Identification.cpp  Identification.h  IndexedMassSpectralPeak.cpp  IndexedMassSpectralPeak.h  IntensityNormalizationEngine.cpp  IntensityNormalizationEngine.h  IsotopicEnvelope.cpp  IsotopicEnvelope.h  Makefile  Ms1ScanInfo.cpp  Ms1ScanInfo.h  PeakIndexingEngine.cpp  PeakIndexingEngine.h  Peptide.cpp  Peptide.h  ProteinGroup.cpp  ProteinGroup.h  ProteinQuantificationEngine.cpp  ProteinQuantificationEngine.h  RetentionTimeCalibDataPoint.cpp  RetentionTimeCalibDataPoint.h  SpectraFileInfo.cpp  SpectraFileInfo.h
MS1decon/: Program.cpp  Program.h
MS2decon/: Program.cpp  Program.h
MassSpectrometry/: DeconvolutionFeature.cpp  DeconvolutionFeature.h  DeconvolutionFeatureWithMassesAndScans.cpp  DeconvolutionFeatureWithMassesAndScans.h  FilteringParams.cpp  FilteringParams.h  GeneratedMzSpectrum.cpp  GeneratedMzSpectrum.h  GeneratedPeak.cpp  GeneratedPeak.h  IFilteringParams.cpp  IFilteringParams.h  IIdentifications.cpp  IIdentifications.h  IMsDataFile.cpp  IMsDataFile.h  IMsDynamicDataFile.cpp  IMsDynamicDataFile.h  IMsStaticDataFile.cpp  IMsStaticDataFile.h  Makefile  MassSpectrometry.h  MsDataFile.cpp  MsDataFile.h  MsDataScan.cpp  MsDataScan.h  SourceFile.cpp  SourceFile.h  SummedMsDataFile.cpp  SummedMsDataFile.h
Mgf/: Makefile  Mgf.cpp  Mgf.h
MzIdentML/: Makefile  MzidIdentifications.cpp  MzidIdentifications.h  README  mzIdentML.Generated.AbstractContactType.cpp  mzIdentML.Generated.AbstractContactType.h  mzIdentML.Generated.AbstractParamType.cpp  mzIdentML.Generated.AbstractParamType.h  mzIdentML.Generated.AffiliationType.cpp  mzIdentML.Generated.AffiliationType.h  mzIdentML.Generated.AmbiguousResidueType.cpp  mzIdentML.Generated.AmbiguousResidueType.h  mzIdentML.Generated.AnalysisCollectionType.cpp  mzIdentML.Generated.AnalysisCollectionType.h  mzIdentML.Generated.AnalysisDataType.cpp  mzIdentML.Generated.AnalysisDataType.h  mzIdentML.Generated.AnalysisProtocolCollectionType.cpp  mzIdentML.Generated.AnalysisProtocolCollectionType.h  mzIdentML.Generated.AnalysisSoftwareType.cpp  mzIdentML.Generated.AnalysisSoftwareType.h  mzIdentML.Generated.BibliographicReferenceType.cpp  mzIdentML.Generated.BibliographicReferenceType.h  mzIdentML.Generated.CVParamType.cpp  mzIdentML.Generated.CVParamType.h  mzIdentML.Generated.ContactRoleType.cpp  mzIdentML.Generated.ContactRoleType.h  mzIdentML.Generated.DBSequenceType.cpp  mzIdentML.Generated.DBSequenceType.h  mzIdentML.Generated.DataCollectionType.cpp  mzIdentML.Generated.DataCollectionType.h  mzIdentML.Generated.DatabaseTranslationType.cpp  mzIdentML.Generated.DatabaseTranslationType.h  mzIdentML.Generated.EnzymeType.cpp  mzIdentML.Generated.EnzymeType.h  mzIdentML.Generated.EnzymesType.cpp  mzIdentML.Generated.EnzymesType.h  mzIdentML.Generated.ExternalDataType.cpp  mzIdentML.Generated.ExternalDataType.h  mzIdentML.Generated.FileFormatType.cpp  mzIdentML.Generated.FileFormatType.h  (+237 more)
MzLibUtil/: AbsoluteTolerance.cpp  AbsoluteTolerance.h  ClassExtensions.cpp  ClassExtensions.h  DoubleRange.cpp  DoubleRange.h  Makefile  MzLibException.cpp  MzLibException.h  MzLibUtil.h  MzLibUtil.h~  MzRange.cpp  MzRange.h  PpmTolerance.cpp  PpmTolerance.h  SystemInfo.cpp  SystemInfo.h  Tolerance.cpp  Tolerance.h
MzML/: IMzmlScan.cpp  IMzmlScan.h  Makefile  Mzml.cpp  Mzml.h  MzmlMethods.cpp  MzmlMethods.h  MzmlPeak.cpp  MzmlPeak.h  MzmlScan.cpp  MzmlScan.h  MzmlScanWithPrecursor.cpp  MzmlScanWithPrecursor.h  MzmlSpectrum.cpp  MzmlSpectrum.h
Proteomics/: AminoAcidPolymer.cpp  AminoAcidPolymer.h  ChemicalFormulaFragment.cpp  ChemicalFormulaFragment.h  ChemicalFormulaModification.cpp  ChemicalFormulaModification.h  ChemicalFormulaTerminus.cpp  ChemicalFormulaTerminus.h  DatabaseReference.cpp  DatabaseReference.h  DigestionPoint.h  DisulfideBond.cpp  DisulfideBond.h  Fragment.cpp  Fragment.cpp~  Fragment.h  FragmentTypes.cpp  FragmentTypes.h  Makefile  Modification.cpp  Modification.h  Modification.h~  ModificationCollection.cpp  ModificationCollection.h  ModificationMotif.cpp  ModificationMotif.h  ModificationSites.cpp  ModificationSites.h  ModificationWithLocation.cpp  ModificationWithLocation.h  ModificationWithMass.cpp  ModificationWithMass.h  ModificationWithMassAndCf.cpp  ModificationWithMassAndCf.h  OldSchoolModification.cpp  OldSchoolModification.h  OldSchoolModificationWithMultiplePossibilities.cpp  OldSchoolModificationWithMultiplePossibilities.h  Peptide.cpp  Peptide.h  (+14 more)
Spectra/: IPeak.cpp  IPeak.h  ISpectrum.cpp  ISpectrum.h  Makefile  Peak.cpp  Peak.h  Spectrum.cpp  Spectrum.h
Test/: ChemicalFormulaTestFixture.cpp  ChemicalFormulaTestFixture.h  DatabaseLoaderTests.cpp  DatabaseLoaderTests.h  ElementsAndIsotopesTests.cpp  ElementsAndIsotopesTests.h  FakeMsDataFile.cpp  FakeMsDataFile.h  FixtureSetUp.cpp  FixtureSetUp.h  Makefile  MassTestFixture.cpp  MassTestFixture.h  MyTests.cpp  MyTests.h  SetUpTests.cpp  SetUpTests.h  SpectrumProcessingAndFiltering.h  TestAminoAcids.cpp  TestAminoAcids.h  TestChemicalFormula.cpp  TestChemicalFormula.h  TestChromatogram.cpp  TestChromatogram.h  TestDataFile.cpp  TestDataFile.h  TestDigestionMotif.cpp  TestDigestionMotif.h  TestElementsAndIsotopes.cpp  TestElementsAndIsotopes.h  TestFragments.cpp  TestFragments.h  (+50 more)
(+541 files in other folders)
